@@ -7,9 +7,11 @@
 package org.gridsuite.modification.server.modifications;
 
 import com.powsybl.iidm.network.Network;
+import com.powsybl.iidm.network.SwitchKind;
+
 import lombok.SneakyThrows;
 import org.gridsuite.modification.server.NetworkModificationException;
-import org.gridsuite.modification.server.dto.BusbarSectionCreationInfos;
+import org.gridsuite.modification.server.dto.CouplingDeviceInfos;
 import org.gridsuite.modification.server.dto.LineSplitWithVoltageLevelInfos;
 import org.gridsuite.modification.server.dto.ModificationInfos;
 import org.gridsuite.modification.server.dto.VoltageLevelCreationInfos;
@@ -18,7 +20,7 @@ import org.gridsuite.modification.server.utils.NetworkCreation;
 import org.junit.Test;
 import org.springframework.http.MediaType;
 
-import java.util.List;
+import java.util.Arrays;
 import java.util.UUID;
 
 import static org.gridsuite.modification.server.NetworkModificationException.Type.LINE_NOT_FOUND;
@@ -53,20 +55,26 @@ public class LineSplitWithNewVoltageLevelTest extends AbstractNetworkModificatio
     @Override
     protected ModificationInfos buildModification() {
         VoltageLevelCreationInfos vl1 = VoltageLevelCreationInfos.builder()
-            .equipmentId("vl1")
-            .equipmentName("NewVoltageLevel")
-            .nominalVoltage(379.3)
-            .substationId("s1")
-            .busbarSections(List.of(new BusbarSectionCreationInfos("v1bbs", "BBS1", 1, 1)))
-            .busbarConnections(List.of())
-            .build();
+                .equipmentId("newVoltageLevel")
+                .equipmentName("NewVoltageLevel")
+                .nominalVoltage(379.3)
+                .substationId("s1")
+                .lowVoltageLimit(0.0)
+                .highVoltageLimit(10.0)
+                .ipMin(0.0)
+                .ipMax(10.0)
+                .busbarCount(2)
+                .sectionCount(2)
+                .switchKinds(Arrays.asList(SwitchKind.BREAKER))
+                .couplingDevices(Arrays.asList(CouplingDeviceInfos.builder().busbarSectionId1("bbs.nw").busbarSectionId2("bbs.ne").build()))
+                .build();
 
         return LineSplitWithVoltageLevelInfos.builder()
             .lineToSplitId("line2")
             .percent(10.0)
             .mayNewVoltageLevelInfos(vl1)
             .existingVoltageLevelId(null)
-            .bbsOrBusId("v1bbs")
+            .bbsOrBusId("newVoltageLevel_1_1")
             .newLine1Id("nl1v")
             .newLine1Name("NewLine1")
             .newLine2Id("nl2v")
@@ -97,7 +105,7 @@ public class LineSplitWithNewVoltageLevelTest extends AbstractNetworkModificatio
     @Override
     protected void assertNetworkAfterCreation() {
         assertNull(getNetwork().getLine("line2"));
-        assertNotNull(getNetwork().getVoltageLevel("vl1"));
+        assertNotNull(getNetwork().getVoltageLevel("newVoltageLevel"));
         assertNotNull(getNetwork().getLine("nl1v"));
         assertNotNull(getNetwork().getLine("nl2v"));
     }
@@ -105,7 +113,7 @@ public class LineSplitWithNewVoltageLevelTest extends AbstractNetworkModificatio
     @Override
     protected void assertNetworkAfterDeletion() {
         assertNotNull(getNetwork().getLine("line2"));
-        assertNull(getNetwork().getVoltageLevel("vl1"));
+        assertNull(getNetwork().getVoltageLevel("newVoltageLevel"));
         assertNull(getNetwork().getLine("nl1v"));
         assertNull(getNetwork().getLine("nl2v"));
     }
